Added missed pydantic dependency for tests (for usage pydantic is not required)

--- a/.github/workflows/publish-to-test-pypi.yaml
+++ b/.github/workflows/publish-to-test-pypi.yaml
@@ -16,7 +16,7 @@ jobs:
     - name: Instal dependency and test environment
       run: |
         pip install -r requirements.txt
-        pip install pytest
+        pip install pydantic pytest
     - name: Run tests
       run: pytest tests
 
