--- a/.github/workflows/publish-to-test-pypi.yaml
+++ b/.github/workflows/publish-to-test-pypi.yaml
@@ -4,6 +4,7 @@ on: push
 
 jobs:
   build:
+    if: startsWith(github.ref, 'refs/tags/')
     name: Build distribution 📦
     runs-on: ubuntu-latest
 
