--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -4,7 +4,7 @@ on: push
 
 jobs:
   build:
-    if: !startsWith(github.ref, 'refs/tags/')
+    if: ${{ ! startsWith(github.ref, 'refs/tags/') }}
     name: Build and run tests
     runs-on: ubuntu-latest
 
