Migrate setup.py to setuptools, fixed dependency installation in build script

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -20,6 +20,7 @@ jobs:
         python-version: ${{ matrix.python_version }}
     - name: Instal dependency and test environment
       run: |
-        pip install -e [test]
+        pip install pydantic pytest
+        python setup.py build install
     - name: Run tests
       run: pytest tests
