--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -17,9 +17,10 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
-        python-version: ${{ matrix.python_version }}
+        python-version: "${{ matrix.python_version }}"
     - name: Instal dependency and test environment
       run: |
+        python -m pip install -U pip setuptools
         pip install pydantic pytest
         python setup.py build install
     - name: Run tests
