--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -21,7 +21,8 @@ jobs:
     - name: Instal dependency and test environment
       run: |
         python -m pip install -U pip setuptools
-        pip install msgspec pydantic pytest
-        python setup.py build install
+        pip install pytest
+        python -m build
+        pip install -e
     - name: Run tests
       run: pytest tests
