--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -22,6 +22,7 @@ jobs:
       run: |
         python -m pip install -U pip setuptools pytest build
         python -m build
-        pip install -e
+        ls -la
+        pip install *.whl
     - name: Run tests
       run: pytest tests
