--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -22,7 +22,7 @@ jobs:
       run: |
         python -m pip install -U pip setuptools pytest build
         python -m build
-        ls -la
-        pip install *.whl
+        ls -la dist/
+        pip install dist/*.whl
     - name: Run tests
       run: pytest tests
