--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -20,7 +20,7 @@ jobs:
         python-version: "${{ matrix.python_version }}"
     - name: Instal dependency and test environment
       run: |
-        python -m pip install -U pip setuptools pytest build
+        python -m pip install -U pip setuptools pytest build pydantic msgspec
         python -m build
         ls -la dist/
         pip install dist/*.whl
